--- a/demo.ipynb
+++ b/demo.ipynb
@@ -19,7 +19,17 @@
     ")\n",
     "b = read_gc_json_blob(\n",
     "    bucket, GCS_PREFIX + \"/data/tweet/tweets_chain_0x38.json\"\n",
-    ")"
+    ")\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import StructType, StructField, StringType, IntegerType\n",
+    "spark = (SparkSession.builder.appName(\"SimpleSparkJob\").master(\"spark://34.142.194.212:7077\")\n",
+    "         .config(\"spark.executor.memory\", \"1G\")  #excutor excute only 1G\n",
+    "        .config(\"spark.driver.memory\",\"1G\") \n",
+    "        .config(\"spark.executor.cores\",\"1\") #Cluster use only 3 cores to excute as it has 3 server\n",
+    "        .config(\"spark.python.worker.memory\",\"1G\") # each worker use 1G to excute\n",
+    "        .config(\"spark.driver.maxResultSize\",\"1G\") #Maximum size of result is 1G\n",
+    "        .config(\"spark.kryoserializer.buffer.max\",\"1024M\")\n",
+    "         .getOrCreate())"
    ]
   },
   {
